# HermesBot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/agents/: doc-curator.toml  explorer.toml  implementer.toml  reviewer.toml  spec-griller.toml  spec-planner.toml  test-runner.toml
docs/: AGENT_ROLES.md  CONTEXT.md  DOCS_POLICY.md  PRODUCT.md  WORKFLOWS.md
docs/milestones/: 0000-milestone-template.md  0001-finance-agent-foundation.md  0002-runtime-service-boundary.md  0003-finance-evidence-provider-contract.md  0004-live-finance-provider-integration.md  0005-openrouter-model-routing-boundary.md  0006-hermes-agent-runtime-integration.md  0007-telegram-delivery-foundation.md  0008-persistence-watchlists-and-scheduling.md  0009-containerization-and-runtime-config.md  0010-aws-ec2-deployment-foundation.md  0011-production-operations-hardening.md
docs/specs/: 0000-spec-template.md  0001-finance-daily-market-brief.md  0002-finance-entry-zone-strategy.md  0003-runtime-service-boundary.md  0004-finance-evidence-provider-contract.md  0005-alpha-vantage-live-finance-provider-integration.md
docs/techdebt/: 2026-06-28-centralize-spec-status-rules.md  2026-06-28-deepen-finance-brief-pipeline.md  2026-06-28-define-architecture-candidate-destination.md  2026-06-28-shrink-skill-handoff-surface.md
docs/visuals/: workflow-optimization.html
src/hermes_finance/: __init__.py  _brief_pipeline.py  _brief_rendering.py  _brief_utils.py  _brief_validation.py  _pullback.py  _strategy_pipeline.py  _strategy_rendering.py  _strategy_scoring.py  _strategy_validation.py  (+3 more)
(+19 files in other folders)
