[project]
name = "hermes-finance"
version = "0.1.0"
description = "Fixture-backed finance brief generator for Hermes"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
